249		C++			Provinces with high-level EU3 forts or shipyards get level 1 V2 forts or shipyards
250		C++			Assign slightly more reasonable starting cash reserves for pops
251		C++			Put some small starting reserves in the national bank (bigger with the national bank NI)
252		C++			More changes to pops. A few bureaucrats for everyone.
					Many fewer officers and somewhat fewer soldiers. Allow some NIs a small influence on pop generation.
253		C++			Fix a few project file problems (if you've had trouble building, rebuild all)
254		C++			Simplify parser leaf rules and improve parser debugging.
255		C++			Limit factory allocation to 10 nations (plus those tied for tenth)
256		C++			Determine EU3 save type dynamically.  Currently unused, but could eliminate the need for multiple build targets.
257		C++			Create states earlier in the conversion process so we can use state data for pops.
258		C++			Place bureaucrat, aristocrat, and capitalist pops in state capitals only.
259		C++			Map DW province 1872 (Ulm)
260		C++			Italy country mappings: add Naples and fix Genoa
261		C++			Improve diagnostic output from country mapper.  Add and improve various country mappings.
262		C++			Additional country mapping improvements.
263		C++			Restrict USA tag to explicit mappings only.  Many events don't work properly if USA is not in North America.
264		C++			Abstract and improve Daimyo-merging logic.  Add capability for user-defined nation merging (see merge_nations.txt).
265		C++			Restrict CNG tag to explicit mappings only; allocating it breaks the Congo Free State event.
266		C++			Additional country mapping improvements.
267		C++			Record the correct country tag in the capital mapping section of the log.  Failing to find EU3 nations for diplomatic agreements is not an error.
268		C++			Add many water province mappings, and allow navies to spawn in them.
269		C++			Map DW province 1853 (Kozani).  Give Epirus a country mapping.