@@ -289,3 +289,4 @@ Revision	Version Updated		Log Message
 267		C++			Record the correct country tag in the capital mapping section of the log.  Failing to find EU3 nations for diplomatic agreements is not an error.
 268		C++			Add many water province mappings, and allow navies to spawn in them.
 269		C++			Map DW province 1853 (Kozani).  Give Epirus a country mapping.
+270		C++			Set some starting CON (from serfdom/free-subj, culture, religion) and MIL (from stability, culture, religion) for pops.  Eventually need other factors (decisions, tolerance, buildings, modifiers) incorporated.
